--- a/gb/19/12/23/n11740764.md
+++ b/gb/19/12/23/n11740764.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/ffbns289/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ffbns289/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>深圳高楼背后的血泪：湖南工人失去了肺</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1074345276-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1074345276-600x400.jpg" />
 <h6></h6>
 <hr>
 <p>【大纪元2019年12月23日讯】（大纪元记者吴馨综合报导）当他们浇筑高楼大厦的地基时，花岗岩粉尘也渗入了他们的胸膛。十多年后他们的双肺变得僵硬，他们会因呼吸困难气绝而终，没人关心他们的求救，而中国尘肺病人还在增加。</p>
 <p>施家曦（Gerry Shih）毕业于斯坦福大学，是美国《华盛顿邮报》的驻中国记者，曾是美联社驻北京的记者，负责报导中国新闻。近日，美国《华盛顿邮报》发表了他从湖南耒阳采访的报导，文章讲述了多个尘肺病人的故事，以及他们上访无果的社会现实。</p>
 <h2>徐春林：这里本应亲人满堂</h2>
-<p>中共在1980年批准<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E6%B7%B1%E5%9C%B3.md">深圳</a>成为经济特区时，深圳的人口仅为三万。在几十年内，农田变成了苹果手机的工厂、亚洲第四大证券交易所和超富豪的高楼大厦。深圳的经济产值从1980年的400万美元猛增到2018年的3,400亿美元，中共官员们经常把深圳称为中国通往世界的窗口。</p>
-<p>对于三十年前的徐春林来说，<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E6%B7%B1%E5%9C%B3.md">深圳</a>是走出穷困湖南耒阳市的一条出路。但他怎么也没想到有一天他会想在这里的立交桥上往下跳。</p>
+<p>中共在1980年批准<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B7%B1%E5%9C%B3.md#1">深圳</a>成为经济特区时，深圳的人口仅为三万。在几十年内，农田变成了苹果手机的工厂、亚洲第四大证券交易所和超富豪的高楼大厦。深圳的经济产值从1980年的400万美元猛增到2018年的3,400亿美元，中共官员们经常把深圳称为中国通往世界的窗口。</p>
+<p>对于三十年前的徐春林来说，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B7%B1%E5%9C%B3.md#1">深圳</a>是走出穷困湖南耒阳市的一条出路。但他怎么也没想到有一天他会想在这里的立交桥上往下跳。</p>
 <p>1989年，年仅21岁的徐春林与他的四个兄弟一起来到深圳冒险，他们在这里的建筑工地工作。他回忆说，他当时带着5000元人民币（约合现在的710美元）回家过年，立即将它们全部换成了大米，超过3300磅（约1500公斤）的大米堆成了粮仓，这样他的家人就可以不再挨饿。</p>
 <p>四年后，徐春林开始做中间人，他将村民介绍给深圳的分包商，分包商在工地预留了一半的工作给湖南人。慢慢地，徐春林成了一个相对富裕的人，住在一栋带华丽铜门的三层楼房里。他在接受施家曦采访时说：“村里的每个人都想认识我，因为我有工作。而深圳的每个老板都想认识我，因为我有人。”</p>
 <p>徐春林所说的工作有一个专业的名称：孔桩爆破井下风钻作业，就是用手提钻钻炮眼，然后装上炸药炸出桩孔，有时深度达150英尺（约45米）。然后，他们将钢筋水泥倒入桩孔中，成为高楼大厦的支柱。</p>
 <p>但是，徐春林并不知道，当钻头钻进花岗岩层中时，二氧化硅粉尘一旦吸入肺腑就具有不可逆转的危害。在过去的十年中，湖南有100多名前劳工死于尘肺病，这是一种无法治愈的疾病，因吸入的尘埃微粒导致肺部产生疤痕和硬化。</p>
 <p>徐春林在深圳矿区工作的四个兄弟已经去世，他自己也被诊断患有晚期尘肺病。徐春林指着他空荡荡的房子说，如果他从未接触过风钻工作，这里将会住满了他的兄弟、侄女和侄子们。</p>
-<figure id="attachment_11765259" style="width: 452px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1074004164.jpg"><img class=" wp-image-11765259" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1074004164-600x400.jpg" alt="" width="452" b="301" /></a><figcaption class="wp-caption-text">在深圳建筑林立的背后，许多建筑工人的健康产生不可逆转的危害。徐春林的四个兄弟已经去世，他自己也被诊断患有晚期尘肺病。示意图。(WANG ZHAO/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_11765259" style="width: 452px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1074004164.jpg"><img class=" wp-image-11765259" src="https://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1074004164-600x400.jpg" alt="" width="452" b="301" /></a><figcaption class="wp-caption-text">在深圳建筑林立的背后，许多建筑工人的健康产生不可逆转的危害。徐春林的四个兄弟已经去世，他自己也被诊断患有晚期尘肺病。示意图。(WANG ZHAO/AFP via Getty Images)</figcaption></figure>
 <h2>桑植县的悲剧：重蹈覆辙</h2>
 <p>陡峭的砂岩峡谷遍布桑植县，这是湖南省的一个贫困县，这里几乎没有工业，甚至没有农业。但是带有仿欧式栏杆的多层房屋沿道而建。记者施家曦认为，这是当地人在深圳等城市打工后的回报，也是用人命为代价建立的。</p>
 <p>“每个人都会盖一栋大房子，然后没人住在里面。”前钻工谷中平（音译：Gu Zhongping）在开车时说。他并指出，在一栋房子里，一名前深圳钻工正在死亡或已经死亡。</p>
@@ -28,17 +28,17 @@
 <p>在发达国家，与工作有关的肺部疾病一直保持稳定或下降，因为煤矿开采等工作的减少和安全标准的提高。但在中国，尘肺病人却正在增加。</p>
 <p>根据中共国家卫生委的数据，2018年，约有87.3万名中国工人患有尘肺病，高于2000年的约55.9万名。北京一家非营利组织“大爱清尘”估计，真实的患者人数要高得多，可能约为600万人。</p>
 <p>正在研究这场危机的中共官员表示，中国有2300万工人有患上这种疾病的危险。卫生部门和研究人员估计，这远远超过印度的1150万高风险工人，美国的200万和欧洲的170万。</p>
-<figure id="attachment_11765264" style="width: 449px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-168771700.jpg"><img class=" wp-image-11765264" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-168771700-600x401.jpg" alt="" width="449" b="300" /></a><figcaption class="wp-caption-text">中国有近3亿农民工就业于合法的灰色地带，缺乏合同的保障。图为湖南农村的一名工人。(AFP/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_11765264" style="width: 449px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/GettyImages-168771700.jpg"><img class=" wp-image-11765264" src="https://i.epochtimes.com/assets/uploads/2019/12/GettyImages-168771700-600x401.jpg" alt="" width="449" b="300" /></a><figcaption class="wp-caption-text">中国有近3亿农民工就业于合法的灰色地带，缺乏合同的保障。图为湖南农村的一名工人。(AFP/AFP via Getty Images)</figcaption></figure>
 <h2>湖南的悲剧谁之过？</h2>
 <p>中共于1978年12月18日开始推行实施改革开放，40年后的今天，中国社会正面临着因追求现代化而积累的各方难题。</p>
 <p>农民从农村来到城市寻找工作，近3亿农民工就业于合法的灰色地带。中共国家统计局的数据显示，尽管2008年颁布了一项法律要求所有雇主提供书面合同，但2016年只有35%的农民工与雇主签订书面合同，这一数字还正在下降。大爱清尘2014年的全国调查发现，患有这种疾病的工人中只有7%签署了合同。</p>
 <p>康奈尔大学（Cornell University）工业和劳工关系学院国际项目主任、中国劳工专家埃里·弗莱德曼（Eli Friedman）表示，中国的建筑业是一个因工死亡占所有行业因工死亡人数四分之一的行业，也是靠包工头非正式雇用工人的行业。他说，中共的劳工系统“将风险降至最低。”</p>
 <p>香港中文大学职业健康研究中心主任谢立亚（Shelly Tse）教授说，由于尘肺病的潜伏性，深圳的工人受到了进一步的伤害。</p>
 <p>谢教授说：“当工人在10年后感觉到逐渐恶化时，他们已无法确定自己患上这种疾病时所服务的公司了。公司也可能已经破产了。”</p>
-<h2><a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E7%BB%B4%E6%9D%83.md">维权</a>过程中发生警民冲突 风钻工被逼跳桥</h2>
+<h2><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%BB%B4%E6%9D%83.md#1">维权</a>过程中发生警民冲突 风钻工被逼跳桥</h2>
 <p>徐春林看着他村庄的死亡人数激增至70多个，6人因病自杀。像曹家这样的当地氏族遭到了破坏，他们埋葬了在深圳患上尘肺病的三个兄弟。</p>
 <p>他说：“我们必须做点什么。人们需要生存。”</p>
-<figure id="attachment_11765268" style="width: 447px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-168771679.jpg"><img class=" wp-image-11765268" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-168771679-600x401.jpg" alt="" width="447" b="299" /></a><figcaption class="wp-caption-text">湖南工人<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E7%BB%B4%E6%9D%83.md">维权</a>抗议，图为湖南的一名尘肺病患者，他曾是一名建筑工人，摄于2013年。(Ed Jones/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_11765268" style="width: 447px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/GettyImages-168771679.jpg"><img class=" wp-image-11765268" src="https://i.epochtimes.com/assets/uploads/2019/12/GettyImages-168771679-600x401.jpg" alt="" width="447" b="299" /></a><figcaption class="wp-caption-text">湖南工人<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%BB%B4%E6%9D%83.md#1">维权</a>抗议，图为湖南的一名尘肺病患者，他曾是一名建筑工人，摄于2013年。(Ed Jones/AFP via Getty Images)</figcaption></figure>
 <p>在湖南的桑植县和汨罗市，生病的工人开始被动员起来，将他们的诉求带到深圳。</p>
 <p>2018年11月上旬，他们数百人占领了深圳的一栋政府大楼，之后警察用警棍和胡椒喷雾将他们驱散，进一步令他们虚弱的肺部受创。</p>
 <p>根据四名抗议者、维权人士和新闻报导的说法，就在与警察发生冲突期间，被警察逼上立交桥、逼向角落的工人们威胁集体跳向八车道的深圳高速公路自杀。</p>
@@ -56,43 +56,48 @@
 <p>在过去的两年中，他花了12,000美元在深圳为抗议者提供食宿。他在微信上为全国尘肺病上访者家庭提供建议。他探望耒阳的寡妇，因为他们的丈夫曾经跟随他南下工作。他还在上访。</p>
 <p>他说，他想要的只是政府对这种疾病的公开数据信息，而不是金钱。</p>
 <p>“这是良心。”</p>
-<p>本文首发于<a href="https://readmoo.com/book/220124230000101">《真相中国》周刊 2019.12月号/第24期</a> #</p>
+<p>本文首发于<ahref="https://readmoo.com/book/220124230000101">《真相中国》周刊 2019.12月号/第24期</a> #◇</p>
 <p>责任编辑：林妍</p>
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/12/23/n11740764.htm">深圳高楼背后的血泪：湖南工人失去了肺</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/16/12/30/n8648755.htm">福建上千名业主举横幅维权与“保安”对峙</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/12/28/n8642028.htm">河南各县城掀起教师维权讨薪潮</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/12/22/n8616681.htm">香港政党吁释维权人士回家过冬</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/12/7/n8568568.htm">近期大陆多名维权人士被抓 气氛紧张</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/11/26/n8529279.htm">四大银行数百人再度集体维权 5人被行拘5日</a></li>
-> <li><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745421.md">X射线机辐射超标 重庆一医院十多名职工患癌</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11768055.htm">川普击毙伊朗二号人物 对中共释何种信号</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11768450.htm">德黑兰若报复 川普：将直捣伊朗52个地点</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11768666.htm">伊朗将军被击毙细节：最后36小时露行踪</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11768186.htm">【新闻看点】台湾大选谁赢 北京都遇难题</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11760693.htm">蒋经国一生反共信念的历程</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737632.htm">自伐者无功！三国谋士许攸的教训</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11745673.htm">父梦桂树 子梦黄鹤 奇梦超前预言一生</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/1/15/n4343055.htm">士为知己者死 古人交友重义胜于生命</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11764607.htm">“中国淡水鱼之王”长江白鲟被宣告灭绝</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11764609.htm">川普为何下令击毙伊朗将军 五角大楼发声明</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766230.htm">杭州政府要求全民储粮 被指转嫁粮食危机</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743745.htm">【罗厨寻味】年菜系列之一：砂锅焗红鱼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11766765.htm">【拍案惊奇】舌尖上的瘟疫 武汉肺炎与野味</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766254.htm">【新闻看点】武汉肺炎是SARS？官抓人 民恐慌</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/2/n11763655.htm">林夕歌曲作词人变佚名 网民斥中共电视台无耻</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766037.htm">凑成好字 40岁章子怡宣布新年二胎产子</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/2/n11764071.htm">华谊老板致员工信责影视团队：失误堪称致命</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11767649.htm">第34届金唱片奖 防弹少年团获音源部门大奖</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766447.htm">姚晨送祝福意外引插曲 章子怡高情商化解尴尬</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/12/30/n8648755.md#1">福建上千名业主举横幅维权与“保安”对峙</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/12/28/n8642028.md#1">河南各县城掀起教师维权讨薪潮</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/12/22/n8616681.md#1">香港政党吁释维权人士回家过冬</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/12/7/n8568568.md#1">近期大陆多名维权人士被抓 气氛紧张</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/11/26/n8529279.md#1">四大银行数百人再度集体维权 5人被行拘5日</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740764.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/25/n11745421.md#1">X射线机辐射超标 重庆一医院十多名职工患癌</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340254.md#1" target="_blank">林辉：抗共而逝的香港前主播让亲共港媒汗颜</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240713.md#1" target="_blank">神灵赐福 巴西一企业稳步发展壮大</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/23/n11740764.htm">深圳高楼背后的血泪：湖南工人失去了肺</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/12/23/n11740764.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
